# sonyci

./: .gitignore  Dockerfile  README.md  codecov.yml  mkdocs.yml  pdm.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CD.yml  CI.yml  docs.yml  labels.yml  publish.yml  release.yml  update.yml
0.1/: 404.html  index.html  objects.inv
0.1/example/: index.html
0.1/install/: index.html
0.1/interpreter/: index.html
0.1/reference/: index.html
0.1/reference/cli/: index.html
0.1/reference/sonyci/: index.html
0.1/search/: search_index.json
docs/: example.ipynb  index.md  install.md  interpreter.ipynb
docs/reference/: cli.md  index.md  sonyci.md
latest/interpreter/: index.html
latest/reference/cli/: index.html
latest/reference/sonyci/: index.html
overrides/: main.html
scripts/: lint
sonyci/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  log.py  sonyci.py  types.py  utils.py
tests/: ci.ipynb  conftest.py  test_cli.py  test_sonyci.py
tests/cli/: test_cli_asset.py  test_cli_login.py  test_cli_search.py
tests/sonyci/: asset.toml  guid.toml  sonyci.toml  sonyci_different_key.toml  sonyci_no_key.toml  test_config.py
tests/vhs/test_cli_asset/: test_asset_search.yaml
tests/vhs/test_cli_login/: test_bad_login.yaml  test_login.yaml
tests/vhs/test_cli_search/: test_empty_search.yaml  test_guid_search.yaml
tests/vhs/test_sonyci/: test_token.yaml  test_workspace.yaml  test_workspace_empty_search.yaml  test_workspace_search.yaml
tests/vhs/tests.test_cli/: test_bad_login.yaml  test_empty_search.yaml  test_guid_search.yaml  test_login.yaml
tests/vhs/tests.test_sonyci/: test_asset.yaml  test_asset_download.yaml  test_token.yaml  test_workspace.yaml  test_workspace_contents.yaml  test_workspace_empty_search.yaml  test_workspace_search.yaml  test_workspaces.yaml
