[project]
name = 'sonyci'
description = 'A Sony Ci api client'
authors = [{ name = 'WGBH-MLA', email = 'ryan_harbert@wgbh.org' }]
dependencies = ["pydantic~=2.12", "requests-oauth2client~=1.8", "loguru~=0.7"]
requires-python = '>=3.10'
readme = 'README.md'
license = { text = 'MIT' }
version = "0.4.1"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
    "trogon>=0.6.0",
    "typer>=0.24.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<10.0",
    "vcrpy~=8.1",
    "pytest-vcr~=1.0",
    "pytest-cov>=5,<8",
    "pytest-sugar~=1.0",
    "pytest-xdist~=3.6",
    "urllib3~=2.6",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
    "mike~=2.1",
    "mkdocstrings[python]>=0.26,<2.0",
    "mkdocs-jupyter~=0.24",
]

[project.scripts]
ci = 'sonyci.__main__:app'
docs = 'mkdocs.commands:serve.serve'
# test = 'pytest --vcr-record=none'
test = 'pytest:main'
# lint = 'ruff check . --fix'
# format = 'black -S .'

[tool.pytest.ini_options]
testpaths = ['tests']
markers = ['no_ci: marks tests to skip on CI']

[tool.coverage.run]
omit = ['tests/*']

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint]
select = [
    'B',   # flake8-bugbear
    'C4',  # flake8-comprehensions
    'C90', # mccabe
    'E',   # pycodestyle errors
    'ERA', # eradicate
    'F',   # pyflakes
    'I',   # isort
    'INT', # flake8-gettext
    'N',   # pep8-naming
    'PIE', # flake8-pie,
    'PLC', # pylint - convention
    'PLE', # pylint - error
    'PLW', # pylint - warning
    'Q',   # flake8-quotes
    'RET', # flake8-return,
    'RUF', # Ruff-specific rules
    'SIM', # flake8-simplify
    'UP',  # pyupgrade
    'W',   # pycodestyle warnings

]
ignore = [
    'B008', # Do not perform function call in argument defaults
    'E501', # line too long

]

[build-system]
requires = ["uv_build>=0.10.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
